// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateTypescriptDefinitionsForTlEntry > comments > adds return type comments 1`] = `
"/**
 * This is a test method
 * 
 * RPC method returns {@link tl.TypeTest}
 */
interface RawTestRequest {
    _: 'test';
}"
`;

exports[`generateTypescriptDefinitionsForTlEntry > comments > adds return type comments 2`] = `
"/**
 * This is a test method
 * 
 * RPC method returns {@link tl.TypeTest}
 */
interface RawTestRequest {
    _: 'test';
}"
`;

exports[`generateTypescriptDefinitionsForTlEntry > comments > adds return type comments 3`] = `
"/**
 * RPC method returns {@link tl.TypeTest} array
 */
interface RawTestRequest {
    _: 'test';
}"
`;

exports[`generateTypescriptDefinitionsForTlEntry > comments > adds tdlib style comments 1`] = `
"/**
 * This is a test constructor
 */
interface RawTest {
    _: 'test';
    /**
     * Some field
     */
    field: number;
}"
`;

exports[`generateTypescriptDefinitionsForTlEntry > comments > adds tl style comments 1`] = `
"/**
 * This is a test constructor
 */
interface RawTest {
    _: 'test';
}"
`;

exports[`generateTypescriptDefinitionsForTlEntry > comments > adds usage info comments 1`] = `
"/**
 * RPC method returns {@link tl.TypeTest}
 * 
 * This method is **not** available for bots
 * 
 * This method *may* throw one of these errors: FOO, BAR
 */
interface RawTestRequest {
    _: 'test';
}"
`;

exports[`generateTypescriptDefinitionsForTlEntry > comments > adds usage info comments 2`] = `
"/**
 * RPC method returns {@link tl.TypeTest}
 * 
 * This method is **not** available for normal users
 */
interface RawTestBotRequest {
    _: 'testBot';
}"
`;

exports[`generateTypescriptDefinitionsForTlEntry > comments > should not break @link tags 1`] = `
"/**
 * This is a test constructor with a very long comment
 * {@link whatever} more text
 */
interface RawTest {
    _: 'test';
}"
`;

exports[`generateTypescriptDefinitionsForTlEntry > comments > wraps long comments 1`] = `
"/**
 * This is a test constructor with a very very very very very
 * very very very long comment
 */
interface RawTest {
    _: 'test';
}"
`;

exports[`generateTypescriptDefinitionsForTlEntry > comments > wraps long comments 2`] = `
"/**
 * This is a test method with a very very very very very very
 * very very long comment
 * 
 * RPC method returns {@link tl.TypeTest}
 */
interface RawTestRequest {
    _: 'test';
}"
`;

exports[`generateTypescriptDefinitionsForTlEntry > generates code with raw flags for constructors with flags 1`] = `
"interface RawTest {
    _: 'test';
    flags: number;
    flags2: number;
}"
`;

exports[`generateTypescriptDefinitionsForTlEntry > ignores namespace for name 1`] = `
"interface RawTest {
    _: 'test.test';
}"
`;

exports[`generateTypescriptDefinitionsForTlEntry > marks optional fields as optional 1`] = `
"interface RawTest {
    _: 'test';
    a?: boolean;
    b?: string;
    c?: tl.TypeFoo;
    d?: tl.namespace.TypeFoo[];
}"
`;

exports[`generateTypescriptDefinitionsForTlEntry > renames non-primitive types 1`] = `
"interface RawTest {
    _: 'test';
    foo: tl.TypeFoo;
    bar: tl.TypeBar[];
    baz: tl.namespace.TypeBaz;
    egg: tl.namespace.TypeEgg[];
}"
`;

exports[`generateTypescriptDefinitionsForTlEntry > replaces primitive types 1`] = `
"interface RawTest {
    _: 'test';
    a: number;
    b: Long;
    c: Double;
    d: string;
    e: Uint8Array;
    f: boolean;
    g: number[];
}"
`;

exports[`generateTypescriptDefinitionsForTlEntry > writes generic types 1`] = `
"interface RawInvokeWithoutUpdatesRequest<X extends tl.TlObject = tl.TlObject> {
    _: 'invokeWithoutUpdates';
    query: X;
}"
`;

exports[`generateTypescriptDefinitionsForTlSchema > writes schemas with methods 1`] = `
"interface RawTest {
    _: 'test';
}
/**
 * RPC method returns {@link tl.TypeTest}
 */
interface RawGetTestRequest {
    _: 'getTest';
}
interface RpcCallReturn {
    'getTest': tl.TypeTest
}
type TypeTest = tl.RawTest
function isAnyTest(o: object): o is TypeTest
type RpcMethod =
    | tl.RawGetTestRequest

type TlObject =
    | tl.RawTest
    | tl.RawGetTestRequest
}
export declare function isAnyTest(o: object): o is tl.TypeTest"
`;

exports[`generateTypescriptDefinitionsForTlSchema > writes schemas with methods 2`] = `
"onst a = arguments; return function(o) { if (typeof o !== 'object' || o === null) return false; for (let i = 0; i < a.length; i++) if (o._ === a[i]) return true; return false } }
export const LAYER = 0;
export const isAnyTest = /*#__PURE__*/ _isAny('test');"
`;

exports[`generateTypescriptDefinitionsForTlSchema > writes schemas with multi-unions 1`] = `
"interface RawTest {
    _: 'test';
}
interface RawTest2 {
    _: 'test2';
}
interface RpcCallReturn {
}
type TypeTest = tl.RawTest | tl.RawTest2
function isAnyTest(o: object): o is TypeTest

type TlObject =
    | tl.RawTest
    | tl.RawTest2
}
export declare function isAnyTest(o: object): o is tl.TypeTest"
`;

exports[`generateTypescriptDefinitionsForTlSchema > writes schemas with multi-unions 2`] = `
"onst a = arguments; return function(o) { if (typeof o !== 'object' || o === null) return false; for (let i = 0; i < a.length; i++) if (o._ === a[i]) return true; return false } }
export const LAYER = 0;
export const isAnyTest = /*#__PURE__*/ _isAny('test', 'test2');"
`;

exports[`generateTypescriptDefinitionsForTlSchema > writes schemas with namespaces 1`] = `
"interface RawTest {
    _: 'test';
}
interface RawTest2 {
    _: 'test2';
}
/**
 * RPC method returns {@link tl.TypeTest}
 */
interface RawGetTestRequest {
    _: 'getTest';
}
interface RpcCallReturn extends test.RpcCallReturn {
    'getTest': tl.TypeTest
}
type TypeTest = tl.RawTest | tl.RawTest2
function isAnyTest(o: object): o is TypeTest

namespace test {
    interface RawTest {
        _: 'test.test';
    }
    interface RawTest2 {
        _: 'test.test2';
    }
    /**
     * RPC method returns {@link tl.test.TypeTest}
     */
    interface RawGetTestRequest {
        _: 'test.getTest';
    }
    interface RpcCallReturn {
        'test.getTest': tl.test.TypeTest
    }
    type TypeTest = tl.test.RawTest | tl.test.RawTest2
    function isAnyTest(o: object): o is TypeTest
}
type RpcMethod =
    | tl.RawGetTestRequest
    | tl.test.RawGetTestRequest

type TlObject =
    | tl.RawTest
    | tl.RawTest2
    | tl.test.RawTest
    | tl.test.RawTest2
    | tl.RawGetTestRequest
    | tl.test.RawGetTestRequest
}
export declare function isAnyTest(o: object): o is tl.TypeTest
export declare function isAnyTest_Test(o: object): o is tl.test.TypeTest"
`;

exports[`generateTypescriptDefinitionsForTlSchema > writes schemas with namespaces 2`] = `
"onst a = arguments; return function(o) { if (typeof o !== 'object' || o === null) return false; for (let i = 0; i < a.length; i++) if (o._ === a[i]) return true; return false } }
export const LAYER = 0;
export const isAnyTest = /*#__PURE__*/ _isAny('test', 'test2');
export const isAnyTest_Test = /*#__PURE__*/ _isAny('test.test', 'test.test2');"
`;

exports[`generateTypescriptDefinitionsForTlSchema > writes simple schemas 1`] = `
"interface RawTest {
    _: 'test';
}
interface RpcCallReturn {
}
type TypeTest = tl.RawTest
function isAnyTest(o: object): o is TypeTest

type TlObject =
    | tl.RawTest
}
export declare function isAnyTest(o: object): o is tl.TypeTest"
`;

exports[`generateTypescriptDefinitionsForTlSchema > writes simple schemas 2`] = `
"onst a = arguments; return function(o) { if (typeof o !== 'object' || o === null) return false; for (let i = 0; i < a.length; i++) if (o._ === a[i]) return true; return false } }
export const LAYER = 0;
export const isAnyTest = /*#__PURE__*/ _isAny('test');"
`;
